rating film bundel

--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -48,7 +48,7 @@
 									{% elseif item == 'film' %}
 										fa fa-film text-primary
 									{% elseif item == 'actor' %}
-										ni-credit-card text-success
+										ni-user-run text-danger
 									{% elseif item == 'category' %}
 										ni-credit-card text-success
 									{% elseif item == 'cinema' %}
