--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -8,10 +8,27 @@
 		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
 		<link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet">
 		<link href="{{ asset('css/global.css') }}" rel="stylesheet"> {% block pageStyle %}{% endblock %}
-		<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
-		<script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+		<link
+		href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+		 <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+		<link
+		href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
+
+		<!-- with v4.1.0 Krajee SVG theme is used as default (and must be loaded as below) - include any of the other theme CSS files as mentioned below (and change the theme property of the plugin) -->
+		<link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/themes/krajee-svg/theme.css" media="all" rel="stylesheet" type="text/css"/>
+
+	<!-- important mandatory libraries -->
+		 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		 <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/js/star-rating.min.js" type="text/javascript"></script>
+
+		<!-- with v4.1.0 Krajee SVG theme is used as default (and must be loaded as below) - include any of the other theme JS files as mentioned below (and change the theme property of the plugin) -->
+		 <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/themes/krajee-svg/theme.js"></script>
+
+		<!-- optionally if you need translation for your language then include locale file as mentioned below (replace LANG.js with your own locale file) -->
+		 <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/js/locales/LANG.js"></script>
 
 	</head>
+
 	{% block body %}
 		{% block header %}
 			<section id="top">
@@ -23,6 +40,7 @@
 									<a class="text-white" href="index.html.twig">
 										<i class="fa fa-video-camera col_red me-1"></i>
 										Planet</a>
+									<hr/>
 								</h3>
 							</div>
 						</div>
@@ -155,7 +173,7 @@
 									<h6 class="fw-normal">
 										<i class="fa fa-map-marker fs-5 align-middle col_red me-1"></i>
 										5311 Ceaver Sidge Td.
-																																																																																																																																																																								Pakland, DE 13507</h6>
+																																																																																																																																																																																		Pakland, DE 13507</h6>
 									<h6 class="fw-normal mt-3">
 										<i class="fa fa-envelope fs-5 align-middle col_red me-1"></i>
 										info@gmail.com</h6>
