--- a/templates/front/listfilms.html.twig
+++ b/templates/front/listfilms.html.twig
@@ -106,7 +106,7 @@
 
 												{% endfor %}
 											</h6>
-
+											<h4 style="color: white;">{{ averageRatings[j][0]['rate_avg']|default('0')|number_format(1) }}<i class="fa fa-star" style="color: red;margin-left: 6px;"></i></h4>
 
 										</div>
 									</div>
@@ -121,7 +121,7 @@
 
 												{% endfor %}
 											</h6>
-
+											
 											<h6>Actors:
 												{% for actor in film.actors %}
 													<a href="{{ path('app_actor_show', {'id': actor.id}) }}">{{ actor.nom }}</a>
@@ -133,51 +133,49 @@
 												{{film.description}}
 											</h6>
 											<form id="rateForm{{j}}">
-												<input id="input-{{j}}-sm" class="rating rating-loading" name="rate" value="{{averageRatings[j][0]['rate_avg']|default('0')}}" data-min="0" data-max="5" data-step="0.5" data-size="sm" data-show-clear="false" data-show-caption="false">
+												<input id="input-{{j}}-sm" class="rating rating-loading" name="rate" data-min="0" data-max="5" data-step="0.5" data-size="sm" data-show-clear="false" data-show-caption="false">
 											</form>
-											<script>
-
-											</script>
 											 <script>
-											$("#input-{{j}}-sm").rating().on("rating:change", function(event, value) {
-console.log("You rated {{film.nom}}: " + value);
-console.log($("#rateForm{{j}}").serialize());
-let xhr = new XMLHttpRequest();
-xhr.open('POST', '{{path("app_rate_film_index")}}', true);
-xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-xhr.onload = function() {
-	console.log(xhr.responseText);
-};
-
-// Encode the data in URL-encoded format
-let data = 'rate=' + encodeURIComponent(value) + '&filmId=' + encodeURIComponent({{film.id}});
-
-xhr.send(data);										
-																																												});
-																																																							</script>
+																						
+																																	</script>
+											 <script>
+																																	$("#input-{{j}}-sm").rating().on("rating:change", function(event, value) {
+																						console.log("You rated {{film.nom}}: " + value);
+																						console.log($("#rateForm{{j}}").serialize());
+																						let xhr = new XMLHttpRequest();
+																						xhr.open('POST', '{{path("app_rate_film_index")}}', true);
+																						xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+																						xhr.onload = function() {
+																							console.log(xhr.responseText);
+																						};
+																						
+																						// Encode the data in URL-encoded format
+																						let data = 'rate=' + encodeURIComponent(value) + '&filmId=' + encodeURIComponent({{film.id}});
+																						
+																						xhr.send(data);										
+																																																																		});
+																																																																													</script>
 
 											<button class="button mt-4" data-bs-toggle="modal" data-bs-target="#Youtubewatch{{j}}" data-thevideo="{{videoUrl[j]}}">
 												<i class="fa fa-play-circle align-middle me-1"></i>
 												Watch Trailer</button>
 
-											<div
-												class="modal fade" id="Youtubewatch{{j}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden=" true">
-												{# modal-md ou modal-sm ou modal-lg ou modal-xl #}
-												<div class="modal-dialog modal-lg">
-													<div class="modal-content">
-														<div class="modal-header">
-															<h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-															<button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
-														</div>
-														<div class="modal-body">
-															<iframe width="560" height="315" src="{{videoUrl[j]}}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-														</div>
-														<div class="modal-footer"></div>
-													</div>
-												</div>
-											</div>
 
 										</div>
+									</div>
+								</div>
+							</div>
+							<div class="modal fade" id="Youtubewatch{{j}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden=" true">
+								<div class="modal-dialog" style="max-width: 594px;">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+											<button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+										</div>
+										<div class="modal-body">
+											<iframe width="560" height="315" src="{{videoUrl[j]}}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+										</div>
+										<div class="modal-footer"></div>
 									</div>
 								</div>
 							</div>
@@ -192,44 +190,44 @@ xhr.send(data);
 
 		{{ block("footer") }}
 	 <script>
-																										function autoPlayYouTubeModal() {
-																														var triggers = document.querySelectorAll('[data-bs-toggle="modal"]');
-																														triggers.forEach(function (trigger) {
-																														trigger.addEventListener('click', function () {
-																														var theModal = this.getAttribute('data-bs-target');
-																														var videoSRC = this.getAttribute('data-theVideo');
-																														var videoSRCauto = videoSRC + "?autoplay=1";
-																														document.querySelector(theModal + ' iframe').setAttribute('src', videoSRCauto);
-																														
-																														var closeButton = document.querySelector(theModal + ' button.close');
-																														closeButton.addEventListener('click', function () {
-																														document.querySelector(theModal + ' iframe').setAttribute('src', videoSRC);
-																														});
-																														});
-																														});
-																														}
-																														document.addEventListener('DOMContentLoaded', function () {
-																														autoPlayYouTubeModal();
-																														});
-																																</script>
+																												function autoPlayYouTubeModal() {
+																																var triggers = document.querySelectorAll('[data-bs-toggle="modal"]');
+																																triggers.forEach(function (trigger) {
+																																trigger.addEventListener('click', function () {
+																																var theModal = this.getAttribute('data-bs-target');
+																																var videoSRC = this.getAttribute('data-theVideo');
+																																var videoSRCauto = videoSRC + "?autoplay=1";
+																																document.querySelector(theModal + ' iframe').setAttribute('src', videoSRCauto);
+																																
+																																var closeButton = document.querySelector(theModal + ' button.close');
+																																closeButton.addEventListener('click', function () {
+																																document.querySelector(theModal + ' iframe').setAttribute('src', videoSRC);
+																																});
+																																});
+																																});
+																																}
+																																document.addEventListener('DOMContentLoaded', function () {
+																																autoPlayYouTubeModal();
+																																});
+																																		</script>
 		 <script>
-																																																window.onscroll = function () {
-																																																						myFunction()
-																																																						};
-																																																						
-																																																						var navbar_sticky = document.getElementById("navbar_sticky");
-																																																						var sticky = navbar_sticky.offsetTop;
-																																																						var navbar_height = document.querySelector('.navbar').offsetHeight;
-																																																						
-																																																						function myFunction() {
-																																																						if (window.pageYOffset >= sticky + navbar_height) {
-																																																						navbar_sticky.classList.add("sticky")
-																																																						document.body.style.paddingTop = navbar_height + 'px';
-																																																						} else {
-																																																						navbar_sticky.classList.remove("sticky");
-																																																						document.body.style.paddingTop = '0'
-																																																						}
-																																																						}
-																																																								</script>
+																																																				window.onscroll = function () {
+																																																										myFunction()
+																																																										};
+																																																										
+																																																										var navbar_sticky = document.getElementById("navbar_sticky");
+																																																										var sticky = navbar_sticky.offsetTop;
+																																																										var navbar_height = document.querySelector('.navbar').offsetHeight;
+																																																										
+																																																										function myFunction() {
+																																																										if (window.pageYOffset >= sticky + navbar_height) {
+																																																										navbar_sticky.classList.add("sticky")
+																																																										document.body.style.paddingTop = navbar_height + 'px';
+																																																										} else {
+																																																										navbar_sticky.classList.remove("sticky");
+																																																										document.body.style.paddingTop = '0'
+																																																										}
+																																																										}
+																																																												</script>
 	</body>
 {% endblock %}
