bookmark fixation + rating final fixation + recherche metier

--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -12,6 +12,9 @@
 		href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
 		 <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
 		<link
+		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+		<link
 		href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
 
 		<!-- with v4.1.0 Krajee SVG theme is used as default (and must be loaded as below) - include any of the other theme CSS files as mentioned below (and change the theme property of the plugin) -->
@@ -173,7 +176,7 @@
 									<h6 class="fw-normal">
 										<i class="fa fa-map-marker fs-5 align-middle col_red me-1"></i>
 										5311 Ceaver Sidge Td.
-																																																																																																																																																																																		Pakland, DE 13507</h6>
+																																																																																																																																																																																												Pakland, DE 13507</h6>
 									<h6 class="fw-normal mt-3">
 										<i class="fa fa-envelope fs-5 align-middle col_red me-1"></i>
 										info@gmail.com</h6>
