--- a/templates/cinema/Map.html.twig
+++ b/templates/cinema/Map.html.twig
@@ -2,61 +2,85 @@
 
     {% block pageStyle %}
         <link href="{{ asset('/css/about.css') }}" rel="stylesheet">
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-        crossorigin=""/>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+        <style>
+            #maCarte { 
+                height: 400px; 
+                width: 100%;
+            }
+        </style>
     {% endblock %}
     
     {% block body %}
-        <body>
+        {{ block("header") }}
     
-            {{ block("header") }}
-    
-            <section id="center" class="center_o pt-2 pb-2">
-                <div class="container-xl">
-                    <div class="row center_o1">
-                        <div class="col-md-5">
-                            <div class="center_o1l">
-                                <h2 class="mb-0">Cinemas</h2>
-                            </div>
+        <section id="center" class="center_o pt-2 pb-2">
+            <div class="container-xl">
+                <div class="row center_o1">
+                    <div class="col-md-5">
+                        <div class="center_o1l">
+                            <h2 class="mb-0">Cinemas</h2>
                         </div>
-                        <div class="col-md-7">
-                            <div class="center_o1r text-end">
-                                <h6 class="mb-0 col_red">
-                                    <a href="{{path('app_film_index')}}">Home</a>
-                                    <span class="me-2 ms-2 text-light">
-                                        <i class="fa fa-caret-right align-middle"></i>
-                                    </span>
-                                    Cinemas</h6>
-                            </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="center_o1r text-end">
+                            <h6 class="mb-0 col_red">
+                                <a href="{{ path('app_film_index') }}">Home</a>
+                                <span class="me-2 ms-2 text-light">
+                                    <i class="fa fa-caret-right align-middle"></i>
+                                </span>
+                                Cinemas</h6>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
     
-           
+        <div id="maCarte"></div>
     
-            {{ block("footer") }}
+        {{ block("footer") }}
     
-            <script>
-                window.onscroll = function () {
-    myFunction()
-    };
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+        <script>
+            var carte = L.map('maCarte');
     
-    var navbar_sticky = document.getElementById("navbar_sticky");
-    var sticky = navbar_sticky.offsetTop;
-    var navbar_height = document.querySelector('.navbar').offsetHeight;
+            // Fonction pour obtenir les coordonnées (latitude et longitude) de l'adresse
+            function getCoordinates(address) {
+                return new Promise(function(resolve, reject) {
+                    fetch('https://nominatim.openstreetmap.org/search?q=' + encodeURI(address) + '&format=json&limit=1')
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data && data.length > 0) {
+                                resolve({ latitude: parseFloat(data[0].lat), longitude: parseFloat(data[0].lon) });
+                            } else {
+                                reject("Adresse non trouvée");
+                            }
+                        })
+                        .catch(error => reject(error));
+                });
+            }
     
-    function myFunction() {
-    if (window.pageYOffset >= sticky + navbar_height) {
-    navbar_sticky.classList.add("sticky")
-    document.body.style.paddingTop = navbar_height + 'px';
-    } else {
-    navbar_sticky.classList.remove("sticky");
-    document.body.style.paddingTop = '0'
-    }
-    }
-            </script>
-        </body>
+            var adresseCinema = "{{ adresseCinema }}"; // Récupérez l'adresse du cinéma depuis le contrôleur ou l'entité
+    
+            // Appelez la fonction pour obtenir les coordonnées de l'adresse du cinéma
+            getCoordinates(adresseCinema)
+                .then(function(coordinates) {
+                    initializeMap(coordinates.latitude, coordinates.longitude);
+                })
+                .catch(function(error) {
+                    console.error("Erreur lors de la récupération des coordonnées :", error);
+                });
+    
+            function initializeMap(latitude, longitude) {
+                carte.setView([latitude, longitude], 13); // Réglage des coordonnées pour centrer la carte sur le cinéma avec un zoom initial de 13
+                L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+                    attribution: '&copy; OpenStreetMap contributors',
+                    minZoom: 1,
+                    maxZoom: 20
+                }).addTo(carte);
+                var marqueur = L.marker([latitude, longitude]).addTo(carte);
+                marqueur.bindPopup("<h4>{{ nomCinema }}</h4>").openPopup();
+            }
+        </script>
     {% endblock %}
     
