--- a/templates/cinema/listCinema.html.twig
+++ b/templates/cinema/listCinema.html.twig
@@ -169,40 +169,40 @@ svg {
 
 		<section id="team" class="pt-4 pb-4 bg_grey">
 			<div class="container-xl">
-				{% for i in range(0,cinemas|length // 3) %}
-					<div class="team_1i row {% if not loop.first %} mt-4{% endif %} ">
-						{% for cinema in cinemas|slice(loop.index0 * 3, 3) %}
-							<div class="cardBox">
-								<div class="card">
-									<img src="{{ asset(cinema.logo) }}" alt="{{ cinema.nom }}" height="180" width="220">
-									<div class="content">
-										<div class="h3">{{cinema.nom}}</div>
-										<p>{{cinema.adresse}}</p>
-                    <form method="post" action="{{ path('app_planning', {'idCinema': cinema.idCinema})}}">
-										<button class="planning">Show Planning</button>
-                    </form>
-										<div>
-											<a class="map-button">
-												<svg fill="#a00303" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 395.71 395.71" xml:space="preserve" stroke="#a00303">
-													<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-													<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-													<g id="SVGRepo_iconCarrier">
-														<g>
-															<path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738 c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388 C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191 c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z"></path>
-														</g>
-													</g>
-												</svg>
-											</a>
-										</div>
-									</div>
-
-								</div>
-							</div>
-
-
-						{% endfor %}
-					</div>
-				{% endfor %}
+				{% for i in range(0, cinemas|length // 3) %}
+        <div class="team_1i row {% if not loop.first %} mt-4{% endif %}">
+            {% for cinema in cinemas|slice(loop.index0 * 3, 3) %}
+                <div class="cardBox">
+                    <div class="card">
+                        <img src="{{ asset(cinema.logo) }}" alt="{{ cinema.nom }}" height="180" width="220">
+                        <div class="content">
+                            <div class="h3">{{ cinema.nom }}</div>
+                            <p>{{ cinema.adresse }}</p>
+                            <form method="post" action="{{ path('app_planning', {'idCinema': cinema.idCinema})}}">
+                                <button class="planning">Show Planning</button>
+                            </form>
+                            <form method="post" action="{{ path('app_cinema_location', {'idCinema': cinema.idCinema})}}">
+                                <div>
+                                    <button type="submit" class="map-button">
+                                        <svg fill="#a00303" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 395.71 395.71" xml:space="preserve" stroke="#a00303">
+                                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                            <g id="SVGRepo_iconCarrier">
+                                                <g>
+                                                    <path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738 c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388 C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191 c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z"></path>
+                                                </g>
+                                            </g>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    {% endfor %}
+    
 			</div>
 		</section>
 
