lier la liste de cinema avec la page de commentaires

--- a/templates/cinema/listCinema.html.twig
+++ b/templates/cinema/listCinema.html.twig
@@ -196,6 +196,15 @@ svg {
                                     </button>
                                 </div>
                             </form>
+                            <form method="post" action="{{ path('app_commentairecinema_index', {'idCinema': cinema.idCinema})}}">
+                                <div>
+                                    <button type="submit" class="comment-button">
+                                      <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,300,150">
+<g fill="#7e0808" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M25,4c-12.68359,0 -23,8.97266 -23,20c0,6.1875 3.33594,12.06641 8.94922,15.83984c-0.13281,1.05078 -0.66406,3.60156 -2.76562,6.58594l-1.10547,1.56641l1.97656,0.00781c5.42969,0 9.10156,-3.32812 10.30859,-4.60547c1.83203,0.40234 3.72656,0.60547 5.63672,0.60547c12.68359,0 23,-8.97266 23,-20c0,-11.02734 -10.31641,-20 -23,-20z"></path></g></g>
+</svg>
+                                    </button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
