--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -8,6 +8,8 @@
 		<title>
 			Argon Dashboard 2 by Creative Tim
 		</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 		<!--     Fonts and icons     -->
 		<link
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
@@ -21,6 +23,7 @@
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- CSS Files -->
 		<link id="pagestyle" href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" rel="stylesheet"/>
+		<link rel="stylesheet" href="https://cdn.datatables.net/2.0.5/css/dataTables.dataTables.min.css">
 	</head>
 	<body class="g-sidenav-show bg-gray-100"> {% block backContent %}{% endblock %}
 		<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main" data-color="danger">
@@ -101,5 +104,7 @@
 				</footer>
 			{% endblock %}
 		{% endblock %}
+
+		
 	</body>
 </html>
