--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -11,6 +11,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
 		<script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
 
+
 	</head>
 	{% block body %}
 		{% block header %}
@@ -103,7 +104,7 @@
 									</ul>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="services.html.twig">Services</a>
+									<a class="nav-link" href="{{ path('app_produit_liste') }}">Products</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="team.html.twig">Team</a>
@@ -155,7 +156,7 @@
 									<h6 class="fw-normal">
 										<i class="fa fa-map-marker fs-5 align-middle col_red me-1"></i>
 										5311 Ceaver Sidge Td.
-																																																																																																																																																																								Pakland, DE 13507</h6>
+																																																																																																																																																																																		Pakland, DE 13507</h6>
 									<h6 class="fw-normal mt-3">
 										<i class="fa fa-envelope fs-5 align-middle col_red me-1"></i>
 										info@gmail.com</h6>
