--- a/templates/categorie_produit/tables.html.twig
+++ b/templates/categorie_produit/tables.html.twig
@@ -1,4 +1,5 @@
 {% extends 'baseBack.html.twig' %}
+{% import 'produit/macros.html.twig' as macros %}
 
 
 {% block backContent %}
@@ -133,41 +134,21 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="card mb-4">
+
 						<div class="card-header pb-0 d-flex justify-content-between">
-							<h6>Authors table</h6>
+
+							<h6>Category product table</h6>
 							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
 								Create
 							</button>
+							{{macros.display_notifications_noty('success',app.flashes('categorieproduit'))}} 
+							{{macros.display_form_notifications_noty(form)}}
+							{% if updateform is defined %}
+								{{macros.display_form_notifications_noty(updateform)}}
+							{% endif %}
 						</div>
-						<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-									</div>
-									<div class="modal-body">
-										{{ form_start(form, {'action': path('app_categorie_produit_new')}) }}
-
-										{% for field in form %}
-											<div class="mb-3">
-												{{ form_label(field, null, {'label_attr': {'class': 'col-form-label'}}) }}
-												{{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
-												{{ form_errors(field) }}
-											</div>
-										
-
-										{% endfor %}
-
-										
-									</div>
-									<div class="modal-footer">
-										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button class="btn">{{ button_label|default('Save') }}</button>
-										{{ form_end(form) }}
-										
-									</div>
-								</div>
+						<div aria-hidden="true" aria-labelledby="staticBackdropLabel" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" id="staticBackdrop" tabindex="-1">
+							<div class="modal-dialog">{{macros.render_modal_form(form,path('app_categorie_produit_new'),'Create CategorieProduit')}}
 							</div>
 						</div>
 						<div class="card-body px-0 pt-0 pb-2">
@@ -188,18 +169,18 @@
 											<tr>
 												<td>
 													<div class="d-flex px-2 py-1">
-														
+
 														<div class="d-flex flex-column justify-content-center">
 															<h6 class="mb-0 text-sm">{{ categorie.nomCategorie }}</h6>
-										
+
 														</div>
 													</div>
 												</td>
 												<td>
 													<p class="text-xs font-weight-bold mb-0">{{ categorie.description }}</p>
-										
+
 												</td>
-												
+
 												<td class="align-middle">
 													<form method="post" action="{{ path('app_categorie_produit_delete', {'idCategorie': categorie.idCategorie}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
 														<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ categorie.idCategorie) }}">
@@ -210,34 +191,17 @@
 													<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{i}}">
 														Edit
 													</button>
-													<div class="modal fade" id="staticBackdrop{{i}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+
+													<div aria-hidden="true" aria-labelledby="staticBackdropLabel" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" id="staticBackdrop{{i}}" tabindex="-1">
 														<div class="modal-dialog">
-															<div class="modal-content">
-																<div class="modal-header">
-																	<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-																	<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-																</div>
-																<div class="modal-body">
-																	{{ form_start(updateForms[i], {'action': path('app_categorie_produit_edit', {'idCategorie': categorie.idCategorie})}) }}
 
-																	{% for field in updateForms[i] %}
-																		<div class="mb-3">
-																			{{ form_label(field, null, {'label_attr': {'class': 'col-form-label'}}) }}
-																			{{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
-																			{{ form_errors(field) }}
-																		</div>
-																		{% endfor %}
-																	
-																	
-																	
-																</div>
-																<div class="modal-footer">
-																	<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-																	<button class="btn">{{ button_label|default('Save') }}</button>
-																	{{ form_end(updateForms[i]) }}
+															{% if formUpdateNumber is not defined or i != formUpdateNumber %}
+																{{ macros.render_modal_form(updateForms[i], path('app_categorie_produit_edit', {'idCategorie': categorie.idCategorie, 'formUpdateNumber': i}), 'Edit CategorieProduit ' ~ i) }}
+															{% else %}
+																{{ macros.render_modal_form(updateform, path('app_categorie_produit_edit', {'idCategorie': categorie.idCategorie, 'formUpdateNumber': i}), 'Edit CategorieProduit ' ~ i) }}
+															{% endif %}
 
-																</div>
-															</div>
+
 														</div>
 													</div>
 												</td>
@@ -570,4 +534,20 @@ Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
 	<script src="{{ asset('js/argon-dashboard.min.js?v=2.0.4') }}"></script>
+
+
+	{% if hasErrorsCreate is defined  %}
+		<script>
+			const myModal = new bootstrap.Modal('#staticBackdrop', {keyboard: false});
+const modalToggle = document.getElementById('staticBackdrop');
+myModal.show(modalToggle);
+		</script>
+	{% endif %}
+	{% if formUpdateNumber is defined %}
+		<script>
+			const myModal = new bootstrap.Modal("{{ '#staticBackdrop' ~ formUpdateNumber }}", {keyboard: false});
+const modalToggle = document.getElementById("{{ 'staticBackdrop' ~ formUpdateNumber }}");
+myModal.show(modalToggle);
+		</script>
+	{% endif %}
 </body>{% endblock %}
