--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -23,6 +23,8 @@
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- CSS Files -->
 		<link id="pagestyle" href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" rel="stylesheet"/>
+		<link rel="stylesheet" href="https://cdn.datatables.net/2.0.5/css/dataTables.dataTables.css" />
+  
 	</head>
 	<body class="g-sidenav-show bg-gray-100"> {% block backContent %}{% endblock %}
 		<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main" data-color="danger">
