--- a/templates/cinema/listCinema.html.twig
+++ b/templates/cinema/listCinema.html.twig
@@ -141,100 +141,81 @@ svg {
 {% endblock %}
 
 {% block body %}
-	<body>
+  <body>
+      {{ block("header") }}
 
-		{{ block("header") }}
+      <!-- Champ de recherche -->
+      <input type="text" id="search-input" placeholder="Search Cinema">
 
-		<section id="center" class="center_o pt-2 pb-2">
-			<div class="container-xl">
-				<div class="row center_o1">
-					<div class="col-md-5">
-						<div class="center_o1l">
-							<h2 class="mb-0">Cinemas</h2>
-						</div>
-					</div>
-					<div class="col-md-7">
-						<div class="center_o1r text-end">
-							<h6 class="mb-0 col_red">
-								<a href="{{path('app_film_index')}}">Home</a>
-								<span class="me-2 ms-2 text-light">
-									<i class="fa fa-caret-right align-middle"></i>
-								</span>
-								Cinemas</h6>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+      <!-- Section des cartes de cinéma -->
+      <section id="team" class="pt-4 pb-4 bg_grey">
+          <div class="container-xl">
+              {% for i in range(0, cinemas|length // 3) %}
+                  <div class="team_1i row {% if not loop.first %} mt-4{% endif %}">
+                      {% for cinema in cinemas|slice(loop.index0 * 3, 3) %}
+                          <div class="cardBox" data-name="{{ cinema.nom|lower }}">
+                              <div class="card">
+                                  <img src="{{ asset(cinema.logo) }}" alt="{{ cinema.nom }}" height="180" width="220">
+                                  <div class="content">
+                                      <div class="h3">{{ cinema.nom }}</div>
+                                      <p>{{ cinema.adresse }}</p>
+                                      <form method="post" action="{{ path('app_planning', {'idCinema': cinema.idCinema})}}">
+                                          <button class="planning">Show Planning</button>
+                                      </form>
+                                      <form method="post" action="{{ path('app_cinema_location', {'idCinema': cinema.idCinema})}}">
+                                          <div>
+                                              <button type="submit" class="map-button">
+                                                  <svg fill="#a00303" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 395.71 395.71" xml:space="preserve" stroke="#a00303">
+                                                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                                      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                                      <g id="SVGRepo_iconCarrier">
+                                                          <g>
+                                                              <path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738 c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388 C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191 c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z"></path>
+                                                          </g>
+                                                      </g>
+                                                  </svg>
+                                              </button>
+                                          </div>
+                                      </form>
+                                      <form method="post" action="{{ path('app_commentairecinema_index', {'idCinema': cinema.idCinema})}}">
+                                          <div>
+                                              <button type="submit" class="comment-button">
+                                                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,300,150">
+                                                      <g fill="#7e0808" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                                                          <g transform="scale(5.12,5.12)">
+                                                              <path d="M25,4c-12.68359,0 -23,8.97266 -23,20c0,6.1875 3.33594,12.06641 8.94922,15.83984c-0.13281,1.05078 -0.66406,3.60156 -2.76562,6.58594l-1.10547,1.56641l1.97656,0.00781c5.42969,0 9.10156,-3.32812 10.30859,-4.60547c1.83203,0.40234 3.72656,0.60547 5.63672,0.60547c12.68359,0 23,-8.97266 23,-20c0,-11.02734 -10.31641,-20 -23,-20z"></path>
+                                                          </g>
+                                                      </g>
+                                                  </svg>
+                                              </button>
+                                          </div>
+                                      </form>
+                                  </div>
+                              </div>
+                          </div>
+                      {% endfor %}
+                  </div>
+              {% endfor %}
+          </div>
+      </section>
 
-		<section id="team" class="pt-4 pb-4 bg_grey">
-			<div class="container-xl">
-				{% for i in range(0, cinemas|length // 3) %}
-        <div class="team_1i row {% if not loop.first %} mt-4{% endif %}">
-            {% for cinema in cinemas|slice(loop.index0 * 3, 3) %}
-                <div class="cardBox">
-                    <div class="card">
-                        <img src="{{ asset(cinema.logo) }}" alt="{{ cinema.nom }}" height="180" width="220">
-                        <div class="content">
-                            <div class="h3">{{ cinema.nom }}</div>
-                            <p>{{ cinema.adresse }}</p>
-                            <form method="post" action="{{ path('app_planning', {'idCinema': cinema.idCinema})}}">
-                                <button class="planning">Show Planning</button>
-                            </form>
-                            <form method="post" action="{{ path('app_cinema_location', {'idCinema': cinema.idCinema})}}">
-                                <div>
-                                    <button type="submit" class="map-button">
-                                        <svg fill="#a00303" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 395.71 395.71" xml:space="preserve" stroke="#a00303">
-                                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                            <g id="SVGRepo_iconCarrier">
-                                                <g>
-                                                    <path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738 c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388 C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191 c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z"></path>
-                                                </g>
-                                            </g>
-                                        </svg>
-                                    </button>
-                                </div>
-                            </form>
-                            <form method="post" action="{{ path('app_commentairecinema_index', {'idCinema': cinema.idCinema})}}">
-                                <div>
-                                    <button type="submit" class="comment-button">
-                                      <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,300,150">
-<g fill="#7e0808" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M25,4c-12.68359,0 -23,8.97266 -23,20c0,6.1875 3.33594,12.06641 8.94922,15.83984c-0.13281,1.05078 -0.66406,3.60156 -2.76562,6.58594l-1.10547,1.56641l1.97656,0.00781c5.42969,0 9.10156,-3.32812 10.30859,-4.60547c1.83203,0.40234 3.72656,0.60547 5.63672,0.60547c12.68359,0 23,-8.97266 23,-20c0,-11.02734 -10.31641,-20 -23,-20z"></path></g></g>
-</svg>
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-    {% endfor %}
-    
-			</div>
-		</section>
+      {{ block("footer") }}
 
-		{{ block("footer") }}
+      <script>
+          // Fonction de recherche
+          document.getElementById('search-input').addEventListener('input', function() {
+              var searchText = this.value.toLowerCase();
+              var cards = document.querySelectorAll('.cardBox');
 
-		<script>
-			window.onscroll = function () {
-myFunction()
-};
-
-var navbar_sticky = document.getElementById("navbar_sticky");
-var sticky = navbar_sticky.offsetTop;
-var navbar_height = document.querySelector('.navbar').offsetHeight;
-
-function myFunction() {
-if (window.pageYOffset >= sticky + navbar_height) {
-navbar_sticky.classList.add("sticky")
-document.body.style.paddingTop = navbar_height + 'px';
-} else {
-navbar_sticky.classList.remove("sticky");
-document.body.style.paddingTop = '0'
-}
-}
-		</script>
-	</body>
+              cards.forEach(function(card) {
+                  var cinemaName = card.dataset.name;
+                  if (cinemaName.includes(searchText)) {
+                      card.style.display = 'block';
+                  } else {
+                      card.style.display = 'none';
+                  }
+              });
+          });
+      </script>
+  </body>
 {% endblock %}
